# 3DSpark

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Engine.h  LightPoint.h  Renderer.h
include/Entities/: BaseShapes.h  Color.h  ConeEntity.h  CylinderEntity.h  Entity.h  RectangularEntity.h  SphereEntity.h
include/Events/: Event.h  EventBus.h  KeyHeldEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h  MouseButtonPressedEvent.h  MouseMovedEvent.h  ObjectRotated180Event.h
include/Managers/: InputManager.h  TextureManager.h  WindowManager.h
include/Texture/: ColorTexture.h  GradientTexture.h  ImageTexture.h  LightTexture.h  Texture.h
shaders/: ColorFragmentShader.glsl  ColorVertexShader.glsl  GradientFragmentShader.glsl  GradientVertexShader.glsl  ImageFragmentShader.glsl  ImageVertexShader.glsl
src/: Camera.cpp  Engine.cpp  LightPoint.cpp  Renderer.cpp  main.cpp
src/Entities/: BaseShapes.cpp  ConeEntity.cpp  CylinderEntity.cpp  Entity.cpp  RectangularEntity.cpp  SphereEntity.cpp
src/Events/: EventBus.cpp
src/Managers/: InputManager.cpp  TextureManager.cpp  WindowManager.cpp
